fixed: change background color, news deatil page on mobile version

--- a/pages/news/detail.module.scss
+++ b/pages/news/detail.module.scss
@@ -16,7 +16,7 @@
   flex-wrap: wrap;
   justify-content: center;
   padding-top: 80px;
-  // background: #e4e5de;
+  background: #f3f3f3;
   min-height: calc(100vh - 177px);
 }
 .title {
